discussion/kv_engine/182625/182625_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[BP] MB-52842: Fix intermittent failure in 'disk>RAM delete paged-out'

The test has long been racy / broken - it (incorrectly) assumed that
attempting to read a non-resident, deleted item would avoid a bg_fetch
and directly return ENOENT. This is flawed as deleted items _are_
added to the Bloom filter in full-eviction mode.

However, this test has been incorrectly passing as it did not wait for
the previous Set to be persisted to disk - which is when the key is
added to the Bloom filter. As such, if the verify_key() call executed
before flusher had completed then the first would report as passing,
as there was no key in the Bloom filter.

Fix the test to check the behaviour I assume it was attempting to
check - wait for persistance of the delete; then run compaction and
purge the tombstone so the newly-built Bloom filter doesn't include
the requested key.

(cherry picked from commit cdc3c2f29ea6bd858faea69190031d17c2879fb8)

Change-Id: I9bbe7dd32f7e23752bccf46327f4275aeab1427d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-11-14 11:00:01.000000000
Message: 
Patch Set 1: Cherry Picked from branch master.

The following files contain Git conflicts:
* engines/ep/tests/ep_testsuite.cc
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-14 11:00:14.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/324560/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-14 11:01:18.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/442/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/ep_testsuite.cc:4352:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD   (c253ed MB-54295: Merge commit "couchbase/cheshire-cat" into neo)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/ep_testsuite.cc:9120:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD   (c253ed MB-54295: Merge commit "couchbase/cheshire-cat" into neo)
^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/442/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/ep_testsuite.cc:4352:1:
error: version control conflict marker in file [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/442/ )
----------------------------------------------------------------------------------------------------------------------
